@@ -1,3 +1,15 @@
+2006-04-05  Johan Dahlin  <jdahlin@async.com.br>
+
+	Backport from trunk:
+	
+	* gtk/gtktreeview.override
+	(_wrap_gtk_tree_sortable_set_default_sort_func): Allow callback 
+	to be set to None, found by Patrick O'Brien
+
+	* gtk/gtk-types.c (PyGdkWindow_PropertyGet): Change property size
+	limit from 9999 to G_MAXLONG.  Thanks Wander Boessenkool.
+	Fixes #327778.
+
 2006-03-09 Michael Smith  <msmith@fluendo.com>
 
         reviewed by: Johan Dahlin  <jdahlin@async.com.br>
